# Ground-Effect-modeling-using-VPM-and-Source-Panels

./: CMakeLists.txt  README.md  source_panel.vtk  translatedground0.2.mtl  translatedground0.5.mtl  translatedground1.mtl  translatedgroundless0.2.mtl  translatedgroundless0.5obj.mtl  translatedgroundless1.mtl  wall.vtk
build - Copy/: cmake_install.cmake  output102.vtk  output104.vtk  output11.vtk  output120.vtk  output125.vtk  output128.vtk  output143.vtk  output145.vtk  output15.vtk  output150.vtk  output166.vtk  output169.vtk  output17.vtk  output183.vtk  output188.vtk  output190.vtk  output197.vtk  output199.vtk  output20.vtk  output206.vtk  output207.vtk  output209.vtk  output211.vtk  output214.vtk  output216.vtk  output222.vtk  output236.vtk  output241.vtk  output25.vtk  output33.vtk  output36.vtk  output43.vtk  output5.vtk  output55.vtk  output61.vtk  output66.vtk  output68.vtk  output69.vtk  output74.vtk  (+2 more)
build2/: CMakeCache.txt  RapidObj.pc  exafmm  log  log2  log5  output10.vtk  output100.vtk  output101.vtk  output102.vtk  output103.vtk  output104.vtk  output105.vtk  output106.vtk  output107.vtk  output108.vtk  output109.vtk  output11.vtk  output110.vtk  output111.vtk  output112.vtk  output113.vtk  output114.vtk  output115.vtk  output116.vtk  output117.vtk  output118.vtk  output119.vtk  output12.vtk  output120.vtk  output121.vtk  output122.vtk  output123.vtk  output124.vtk  output125.vtk  output126.vtk  output127.vtk  output128.vtk  output129.vtk  output13.vtk  (+368 more)
build3/: CTestTestfile.cmake  exafmm  log  log3  log4  log5  output101.vtk  output102.vtk  output103.vtk  output104.vtk  output105.vtk  output106.vtk  output107.vtk  output108.vtk  output109.vtk  output110.vtk  output111.vtk  output112.vtk  output113.vtk  output114.vtk  output115.vtk  output116.vtk  output117.vtk  output118.vtk  output119.vtk  output120.vtk  output121.vtk  output122.vtk  output123.vtk  output124.vtk  output125.vtk  output126.vtk  output127.vtk  output128.vtk  output129.vtk  output130.vtk  output131.vtk  output132.vtk  output133.vtk  output134.vtk  (+125 more)
build3/source_panels/: Makefile  cmake_install.cmake
exafmm/: CMakeLists.txt
exafmm/exafmm_vpm/: blade.h  build_tree.h  complexify.h  exafmm.h  fmm.cpp  kernel.cpp  kernel.h  traverse_eager.h
source_panels/: CMakeLists.txt  bound_panels.vtk  combined_file.vtk  surface.cpp  surface.hpp
